guia-09/k8s/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: devops-portfolio
  labels:
    project: devops-portfolio
    TP: "09"
